# ouioui

./: .gitignore  README.md  _version.py  ouioui.py  pyproject.toml
config/: example.toml
ouioui/: __init__.py  _version.py  app.py  config.py  database.py  ouioui.py  utils.py
tests/: test_config.toml  test_functions.py  test_import.py
